--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,8 @@ header {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-
+  position: relative;
+  z-index: 5;
 
 }
 
@@ -60,10 +61,24 @@ header .headerContent {
   position: relative;
 }
 
+header .headerContent div {
+  width: 100vw;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 30vh;
+}
+
 header .headerContent h1 {
   font-size: 7vh;
   opacity: 0.4;
   text-align: center;
+  animation-name: preloaderAnimationAlt;
+  animation-iteration-count: infinite;
+  animation-duration: 5s;
+  width: max-content;
+  height: max-content;
 }
 
 .preloader {
@@ -71,7 +86,7 @@ header .headerContent h1 {
   width: 100vw;
   height: 100vh;
   background-color: var(--backgroundColor);
-  z-index: 10;
+  z-index: 50;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -130,7 +145,9 @@ header .headerContent h1 {
 
 main {
   width: 100vw !important;
-
+  position: relative;
+  z-index: 5;
+  background: linear-gradient(189deg, black, transparent);
 }
 
 .zoroContainer {
@@ -146,7 +163,13 @@ main {
 }
 
 .zoroContainer img {
-  width: 10vh;
+  width: 20vh;
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.scale-1 {
+  transform: scaleX(-1);
 }
 
 .animateZoro {
@@ -154,6 +177,27 @@ main {
   animation-duration: 1s;
   animation-fill-mode: forwards;
   animation-timing-function: linear;
+}
+
+
+::-webkit-scrollbar {
+  width: 0.2vw;
+  transition-duration: 0.3s !important;
+}
+
+::-webkit-scrollbar-track {
+  background: #000000;
+  transition-duration: 0.3s !important;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.138);
+  transition-duration: 0.3s !important;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  transition-duration: 0.3s !important;
+  background-color: rgba(255, 255, 255, 0.567);
 }
 
 
@@ -174,6 +218,15 @@ main {
 #aboutUs .imageContainer img,
 #contact .imageContainer img {
   height: 30vh;
+}
+
+hr {
+  margin: 0 0 !important;
+  color: white !important;
+  border: 0.5vh solid;
+  opacity: 1 !important;
+  filter: brightness(0.2);
+  background-color: black !important;
 }
 
 #aboutUs .row .col-6 {
@@ -197,7 +250,7 @@ main {
   background-size: cover;
   padding: 4vw;
   overflow: hidden;
-
+  filter: brightness(0.5);
   animation-name: textWithPaperAnimation;
   animation-duration: 10s;
   animation-iteration-count: infinite;
@@ -207,7 +260,8 @@ main {
 
 .textWithPaper:hover {
   opacity: 0.1;
-  filter: blur(2vh);
+  filter: blur(2vh) brightness(0.5);
+
 
 
 }
@@ -227,6 +281,8 @@ main {
 footer {
   text-align: center;
   color: rgba(255, 255, 255, 0.325);
+  position: relative;
+  z-index: 5;
 }
 
 nav ul {
@@ -240,7 +296,7 @@ nav {
   padding: 3vh 10vw;
   width: 100vw;
   position: absolute;
-  z-index: 3;
+  z-index: 6;
 }
 
 nav ul a {
@@ -248,10 +304,23 @@ nav ul a {
   text-decoration: none;
   font-size: 2vh;
   opacity: 0.2 !important;
+  cursor: pointer;
 }
 
 nav ul a:hover {
   opacity: 1 !important;
+}
+
+.backgroundVideo {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.backgroundVideo video {
+  opacity: 0.1;
+  transform: scaleX(-1);
 }
 
 @keyframes animateZoro {
@@ -296,6 +365,39 @@ nav ul a:hover {
     opacity: 0;
     filter: blur(10vh);
     transform: translate3d(-2vh, -2vh, -2vh);
+
+  }
+}
+
+
+@keyframes preloaderAnimationAlt {
+  0% {
+    opacity: 0.5;
+    transform: translate3d(3vh, 2vh, 1vh);
+    filter: blur(0.2vh);
+  }
+
+  33% {
+    opacity: 0.5;
+    transform: translate3d(1vh, 2vh, 3vh);
+    filter: blur(0px);
+  }
+
+  66% {
+    filter: blur(0.1vh);
+    transform: translate3d(1vh, 1vh, 1vh);
+  }
+
+  79% {
+    opacity: 0.5;
+    filter: blur(0px);
+    transform: translate3d(2vh, 2vh, 2vh);
+  }
+
+  100% {
+    opacity: 0.5;
+    filter: blur(0.2vh);
+    transform: translate3d(3vh, 2vh, 1vh);
 
   }
 }
